--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/jamesg31/Static-Blog-Engine#readme",
   "dependencies": {
+    "aws-sdk": "^2.1214.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mailparser": "^3.5.0",
     "smtp-server": "^3.11.0"
